# dz_rps

./: .gitignore  CMakeLists.txt
data/: riddles.csv
src/: client.cpp  client.h  main_client.cpp  main_server.cpp  protocol.cpp  protocol.h  riddle.h  server.cpp  server.h
